k8s/cluster/apps/flux-system/webhook/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns/is-public: "true"
  name: webhook-receiver
spec:
  ingressClassName: nginx
  rules:
    - host: "flux-webhook.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "flux-webhook.${SECRET_DOMAIN}"
